@@ -607,6 +607,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\..\include\leakHunter.h"
+				>
+			</File>
+			<File
 				RelativePath=".\..\..\include\IrrlichtDevice.h"
 				>
 			</File>
@@ -2979,6 +2983,10 @@
 			</File>
 			<File
 				RelativePath="os.cpp"
+				>
+			</File>
+			<File
+				RelativePath="leakHunter.cpp"
 				>
 			</File>
 			<File
